--- a/project/bikini_bottom/templates/context/base.html
+++ b/project/bikini_bottom/templates/context/base.html
@@ -1,11 +1,22 @@
+{% load static %}
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %} | Bikini Bottom </title>
     {% block head %}{% endblock %}
+
+    <!-- BOOTSTRAP -->
+    <!-- <link rel="stylesheet" href="{% static 'bootstrap-5.2.3-dist/css/bootstrap.css' %}">
+    <script src="{ static 'bootstrap-5.2.3-dist/js/bootstrap.js'}" ></script> -->
+
+    <!-- BOOTSTRAP CDN -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"/>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
-<body>
+<body> 
+    <!-- class="container" -->
     {% block body %}{% endblock %}
 </body>
 </html>
