--- a/project/bikini_bottom/templates/pages/home.html
+++ b/project/bikini_bottom/templates/pages/home.html
@@ -3,7 +3,29 @@
 {% block title %}
 home
 {% endblock %}
-{% block head %}{% endblock %}
+{% block head %}
+<!-- LEAFLET -->
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+
+<style>
+    #peta{
+        height: 500px;
+    }
+</style>
+
+{% endblock %}
 {% block body %}
 <h1>Testing inheritance html</h1>
+<div id="peta"> Tampilan Peta </div>
+
+<script>
+    const peta = L.map('peta').setView([11.608274122747922, 165.37697796900906], 11);
+
+    L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+    maxZoom: 19,
+    attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+}).addTo(peta);
+
+</script>
 {% endblock %}
