--- a/project/bikini_bottom/templates/pages/home.html
+++ b/project/bikini_bottom/templates/pages/home.html
@@ -27,5 +27,10 @@ home
     attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
 }).addTo(peta);
 
+fetch('{% url "home_api" %}')
+    .then(response => response.json())
+    .then(function(json){
+        L.geoJSON(json).addTo(peta)
+    })
 </script>
 {% endblock %}
