--- a/project/bikini_bottom/templates/pages/home.html
+++ b/project/bikini_bottom/templates/pages/home.html
@@ -17,6 +17,7 @@ home
 {% endblock %}
 {% block body %}
 <h1>Testing inheritance html</h1>
+<a href="{% url 'facility_form_add' %}" class="btn btn-primary">Add Fasilitas</a>
 <div id="peta"> Tampilan Peta </div>
 
 <script>
@@ -30,7 +31,19 @@ home
 fetch('{% url "home_api" %}')
     .then(response => response.json())
     .then(function(json){
-        L.geoJSON(json).addTo(peta)
+            L.geoJSON(json,{
+                onEachFeature: function(feature, layer){
+                    layer.bindPopup(
+                     `
+                        <h5>${feature.properties.name}</h5>
+                    <ul>
+                        <li>${feature.properties.price}</li>
+                        <li>${feature.properties.price_unit}</li>
+                    </ul>
+                    `
+                    )
+                }
+            }).addTo(peta)
     })
 </script>
 {% endblock %}
