--- a/project/bikini_bottom/templates/context/base.html
+++ b/project/bikini_bottom/templates/context/base.html
@@ -15,8 +15,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"/>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
-<body> 
-    <!-- class="container" -->
+<body class="container">
+    {% include 'context/navbar.html' %}
     {% block body %}{% endblock %}
-</body>
+  </body>
 </html>
