--- a/project/bikini_bottom/templates/pages/facility_list.html
+++ b/project/bikini_bottom/templates/pages/facility_list.html
@@ -12,16 +12,17 @@
 
 {{data}}
 
-<table class="table table-hover">
+<table class="table table-striped table-hover">
     <thead>
       <tr>
         <th>Nama</th>
-        <th>Types</th>
+        <th>Tipe</th>
         <th>Status</th>
-        <th>Price</th>
-        <th>Price Unit</th>
-        <th>Photo</th>
+        <th>Harga</th>
+        <th>Satuan Harga</th>
+        <th>Foto</th>
         <th>Open?</th>
+      </tr>
     </thead>
     <tbody>
         {% for item in data %}
@@ -42,13 +43,15 @@
             {% elif item.status == 'proposed' %}
             <span class="badge bg-primary">{{item.status}}</span>
             {% endif %}
+          </td>
           <td>{{item.price}}</td>
           <td>{{item.price_unit}}</td>
           <td><img src="{{item.photo.url}}" alt="" height="100px"></td>
           <td>
-            {{% if item.open %}} ✔️ {{% else %}} ⛔ {{% endif %}}</td>
-        </tr>
-        {% endfor %}
+            {% if item.open %} ✅ {% else %} ⛔ {% endif %}
+        </td>
+     </tr>
+     {% endfor %}
     </tbody>
 </table>
 {% endblock %}
