--- a/project/bikini_bottom/templates/pages/facility_add.html
+++ b/project/bikini_bottom/templates/pages/facility_add.html
@@ -17,6 +17,6 @@
 <form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {{form|crispy}}
-    <input type="submit"/>
+    <input type="submit" class="btn btn-primary"/>
 </form>
 {% endblock %}
