--- a/project/bikini_bottom/templates/pages/facility_list.html
+++ b/project/bikini_bottom/templates/pages/facility_list.html
@@ -10,8 +10,6 @@
 <h1>Daftar Fasilitas</h1>
 <a href="{% url 'facility_form_add' %}" class="btn btn-primary">Add Fasilitas</a>
 
-{{data}}
-
 <table class="table table-striped table-hover">
     <thead>
       <tr>
@@ -21,7 +19,8 @@
         <th>Harga</th>
         <th>Satuan Harga</th>
         <th>Foto</th>
-        <th>Open?</th>
+        <th>Buka?</th>
+        <th></th>
       </tr>
     </thead>
     <tbody>
@@ -49,6 +48,10 @@
           <td><img src="{{item.photo.url}}" alt="" height="100px"></td>
           <td>
             {% if item.open %} ✅ {% else %} ⛔ {% endif %}
+        </td>
+        <td>
+            <a href="{% url 'facility_form_update' item.id %}" class="btn btn-sm btn-success">Update</a>
+            <a href="{% url 'facility_form_delete' item.id %}" class="btn btn-sm btn-danger">Delete</a>
         </td>
      </tr>
      {% endfor %}
